[project]

authors = [
    { name = "eri24816", email = "a931eric@gmail.com" },
    { name = "peterxcli", email = "peterxcli@gmail.com" },
]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]


[tool.poetry]
name = "objectsync"
version = "0.9.1"
description = ""
authors = ["peterxcli <peterxcli@gmail.com>","eri24816 <a931eric@gmail.com>"]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
topicsync = ">=0.12.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
