[project]

authors = [
    { name = "eri24816", email = "a931eric@gmail.com" },
    { name = "peterxcli", email = "peterxcli@gmail.com" },
]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]


[tool.poetry]
name = "objectsync"
version = "0.10.0"
description = ""
authors = ["eri24816 <a931eric@gmail.com>","peterxcli <peterxcli@gmail.com>"]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
topicsync = ">=0.13.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
